--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,9 +10,9 @@
 <body>
     <!-- Header Section -->
     <div class="agencytitle-container">
-        <h2 class="agency-title">Trio Outsourcing Services</h2>
+        <a class="links" href="/">Trio Outsourcing Services</a>
     </div>
-
+    
     <!-- Login Container -->
     <div class="login-container">
         <h2 class="login-header">Ready to take the next step?</h2>
