--- a/views/main.ejs
+++ b/views/main.ejs
@@ -1,54 +1,61 @@
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title><%= locals.title ? locals.title : 'T.O.S.' %></title>
-        <link rel="icon" type="image/x-icon" href="/static/assets/logo.png">
-        <link rel="stylesheet" href="/static/main.css">
-    </head>
-    <body>
-        <nav>
-            <div class="brand-container">
-                <h1 class="brand">T. O. S.</h1>
-                <a href="index.html"><img class="brand-title" src="/static/assets/tos logo.png" width="80px" alt="Error"></a>
-            </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title><%= locals.title ? locals.title : 'T.O.S.' %></title>
+    <link rel="icon" type="image/x-icon" href="/static/assets/logo.png">
+    <link rel="stylesheet" href="/static/main.css">
 
-            <div class="links-container">
-                <a class="links" href="/findjobs.js">Find Jobs</a>
-                <a class="links" href="companyreviews.html">Company Reviews</a>
-                <a class="links" href="findsalaries.html">Find Salaries</a>
-            </div>
+</head>
+<body>
+    <nav>
+        <div class="brand-container">
+            <a href="index.html"><img class="brand-title" src="/static/assets/tos logo.png" alt="Error"></a>
+            <i class="baseline-class">Trio Outsourcing Services</i>
+        </div>
+        <div class="signup-container">
+            <a class="links" href="/login">Log In/Sign In</a>
+            <a class="links" href="employers.html">Employers/Job Post</a>
+        </div>
+    </nav>
 
-            <div class="signup-container">
-                <a class="links" href="/login">Log In/Sign In</a>
-                <a class="links" href="employers.html">Employers/Job Post</a>
-            </div>
-        </nav>
+    <main>
+        <div class="login-container">
+            <h2 class="login-header">Ready to take the next step?</h2>
+            <p class="login-text">Motivate with our Job Search Quotes</p>
 
-        <main>
-            <div class="jobsearch-container">
-            <input class="search-container" type="text" placeholder="Jobtitle, keywords, or company">
-            </div>
-            <div class="locationsearch-container">
-            <input class="location-container" type="text" placeholder="City, province or POEA">
-            </div>
-        
-            <div class="text">
-                <a class="post-link" href="login"> Post your resume</a> - It only takes a few seconds
-            </div>
-            <div>
-                <button id="find-jobs-button" class="find-button">Find Jobs</button>
-            </div>
-        </main>
+            <div class="slideshow-container">
 
-        <!-- custom JavaScript code goes here -->
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    
-      
-        
-        
-    </body>
-    </html>
+                <div class="mySlides">
+                  <q>I never dreamed about success. I worked for it.</q>
+                  <p class="author">— Estee Lauder</p>
+                </div>
+                
+                <div class="mySlides">
+                  <q>The crowning fortune of a man is to be born to some pursuit which finds him employment and happiness, whether it be to make baskets, or broadswords, or canals, or statues, or songs..</q>
+                  <p class="author">—Ralph Waldo Emerson</p>
+                </div>
+                
+                <div class="mySlides">
+                  <q>Believe in yourself! Have faith in your abilities! Without a humble but reasonable confidence in your own powers you cannot be successful or happy.</q>
+                  <p class="author">—Norman Vincent Peale</p>
+                </div>
+                
+                <a class="prev" onclick="plusSlides(-1)">❮</a>
+                <a class="next" onclick="plusSlides(1)">❯</a>
+                
+                </div>
+                
+                <div class="dot-container">
+                  <span class="dot" onclick="currentSlide(1)"></span> 
+                  <span class="dot" onclick="currentSlide(2)"></span> 
+                  <span class="dot" onclick="currentSlide(3)"></span> 
+                </div>
+    </main>
 
-
+    <!-- custom JavaScript code goes here -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="/static/main.js"></script>
+</body>
+</html>
