--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,7 +10,7 @@
 <body>
     <!-- Header Section -->
     <div class="agencytitle-container">
-        <a class="links" href="/">Trio Outsourcing Services</a>
+        <a class="linktomain" href="/">Trio Outsourcing Services</a>
     </div>
     
     <!-- Login Container -->
@@ -30,7 +30,7 @@
         <!-- Continue with Google Button -->
         <button class="google-container">
             <a href="#">
-                <img class="google-logo" src="/static/assets/google icon.jpg" width="30px" alt="Error">
+                <img class="google-logo" src="/static/assets/google.png" width="30px" alt="Error">
                 <p class="btn-google">Continue with Google</p>
             </a>
         </button>
@@ -38,7 +38,7 @@
         <!-- Continue with Apple Button -->
         <button class="apple-container">
             <a href="#">
-                <img class="apple-logo" src="/static/assets/apple icon.png" width="65px" alt="Error">
+                <img class="apple-logo" src="/static/assets/apple.png" width="65px" alt="Error">
                 <p class="btn-apple">Continue with Apple</p>
             </a>
         </button>
@@ -81,12 +81,12 @@
 
             <!-- Forgot Password Link -->
             <div class="field-wrap">
-                <a href="/forgot-password">Forgot Password?</a>
+                <a class="forgot-pass" href="/forgot-password">Forgot Password?</a>
             </div>
             
             <!-- Submit Button -->
             <div class="field-wrap">
-                <button type="submit" class="btn btn-success rounded-pill">Continue</button>
+                <button type="submit" class="btn btn-success rounded-pill" id="cont-btn">Continue</button>
             </div>
         </form>
         <!-- End Login Form -->
