--- a/views/main.ejs
+++ b/views/main.ejs
@@ -22,7 +22,7 @@
 
     <main>
         <div class="login-container">
-            <h2 class="login-header">Ready to take the next step?</h2>
+            <h2 class="ready">Ready to take the next step?</h2>
             <p class="login-text">Motivate with our Job Search Quotes</p>
 
             <div class="slideshow-container">
