--- a/public/main.css
+++ b/public/main.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("/static/assets/back.jpg");
+    /* background-image: url("/static/assets/back.jpg"); */
     height: 100vh; 
     background-position: center;
     background-repeat: no-repeat;
@@ -19,7 +19,7 @@ body {
      display: flex;
      justify-content: space-between;
      align-items: center;
-     padding: 10px 20px;
+     padding: 10px 10px;
  }
  
  .brand-container {
