--- a/views/view_job.ejs
+++ b/views/view_job.ejs
@@ -28,6 +28,7 @@
                 <a href="/static/jobs.ejs">all jobs</a>
                 <a href="/static/contact.ejs">contact us</a>
                 <a href="/static/login.ejs">account</a>
+                <a href="/static/postjob.ejs">account</a>
             </nav>
 
             <a href="#" class="btn" style="margin-top: 0;">post job</a>
