--- a/views/home.ejs
+++ b/views/home.ejs
@@ -21,14 +21,14 @@
 
 
             <nav class="navbar">
-                <a href="/static/home.ejs">home</a>
-                <a href="/static/about.ejs">about us</a>
-                <a href="/static/jobs.ejs">all jobs</a>
-                <a href="/static/contact.ejs">contact us</a>
-                <a href="/static/login.ejs">account</a>
+                <a class="links" href="/home">Home</a>
+                <a class="links" href="/about">About Us</a>
+                <a class="links" href="/jobs">Jobs</a>
+                <a class="links" href="/contact">Contact Us</a>
+                <a class="links" href="/login">account</a>
             </nav>
 
-            <a href="#" class="btn" style="margin-top: 0;">post job</a>
+            <a href="/postjob" class="btn-link" style="margin-top: 0;">post job</a>
         </section>
     </header>
 <!---header section ends -->
@@ -276,7 +276,7 @@
             <a href="#"><i class="fas fa-angle-right"></i> account</a>
             <a href="/static/login.ejs"><i class="fas fa-angle-right"></i> login</a>
             <a href="/static/register.ejs"><i class="fas fa-angle-right"></i> register</a>
-            <a href="#"><i class="fas fa-angle-right"></i> post job</a>
+            <a href="/static/postjob.ejs"><i class="fas fa-angle-right"></i> post job</a>
             <a href="#"><i class="fas fa-angle-right"></i> dashboard</a>
         </div>
         
