--- a/public/style.css
+++ b/public/style.css
@@ -75,13 +75,13 @@ section{
     text-transform: capitalize;
 }
 
-.btn{
+.btn-link{
     display: inline-block;
     margin-top: 1rem;
     padding: 1rem 3rem;
     cursor: pointer;
     font-size: 1.8rem;
-    color: beige;
+    color: rgb(164, 164, 22);
     background-color: var(--main-color);
     border-radius: .5rem;
     text-transform: capitalize;
@@ -578,7 +578,7 @@ header .flex .navbar a:hover{
 }
 .job-details .details .save i{
     margin-right: .5rem;
-    color: black;
+    color: rgb(189, 64, 64);
 }
 .job-details .details .save span{
     color: var(--main-color);
