--- a/views/view_company.ejs
+++ b/views/view_company.ejs
@@ -24,14 +24,14 @@
 
 
             <nav class="navbar">
-                <a href="/static/home.ejs">home</a>
-                <a href="/static/about.ejs">about us</a>
-                <a href="/static/jobs.ejs">all jobs</a>
-                <a href="/static/contact.ejs">contact us</a>
-                <a href="/static/login.ejs">account</a>
+                <a class="links" href="/home">Home</a>
+                <a class="links" href="/about">About Us</a>
+                <a class="links" href="/jobs">Jobs</a>
+                <a class="links" href="/contact">Contact Us</a>
+                <a class="links" href="/login">account</a>
             </nav>
 
-            <a href="#" class="btn" style="margin-top: 0;">post job</a>
+            <a href="/postjob" class="btn-link" style="margin-top: 0;">post job</a>
         </section>
     </header>
 
