--- a/public/style.css
+++ b/public/style.css
@@ -75,6 +75,16 @@ section{
     text-transform: capitalize;
 }
 
+#logout-link {
+    color: red;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  #logout-link:hover {
+    text-decoration: none;
+  }
+
 .btn-link{
     display: inline-block;
     margin-top: 1rem;
