--- a/views/login.ejs
+++ b/views/login.ejs
@@ -21,10 +21,6 @@
                 <img src="/static/assets/logo.png" alt="Logo" style="width: 80px; height: 50px;"> <!-- Adjust width and height as needed -->
                 T'OutSourcing.
             </a>
-
-
-        
-
     </header>
 
 
@@ -33,6 +29,7 @@
 <div class="account-form-container">
     <section class="account-form">
         <form action="/login" method="post">
+            <h3>Ready to take the next Step?</h3>
                 <input type="email" required name="email" maxlength="50" placeholder="Enter your email" class="input">
                 <input type="password" required name="password" maxlength="20" placeholder="Enter your password" class="input" id="password">
                 <span class="hide-show-icon" id="password-icon" onclick="togglePassword('password')">
