--- a/public/style.css
+++ b/public/style.css
@@ -74,7 +74,18 @@ section{
     font-size: 6rem;
     text-transform: capitalize;
 }
-
+.btn {
+    display: inline-block;
+    margin-top: 1rem;
+    padding: 1rem 3rem;
+    cursor: pointer;
+    font-size: 1.8rem;
+    color: rgb(164, 164, 22);
+    background-color: var(--main-color);
+    border-radius: .5rem;
+    text-transform: capitalize;
+    text-align: center;
+}
 .btn-link{
     display: inline-block;
     margin-top: 1rem;
@@ -87,7 +98,10 @@ section{
     text-transform: capitalize;
     text-align: center;
 }
-
+.btn-link:hover{
+    background-color: orange;
+    color: var(--white);
+}
 .btn:hover{
     background-color: orange;
     color: var(--white);
@@ -121,10 +135,12 @@ section{
     color:black;
     cursor: pointer;
     display: none;
+    position: relative;
 }
 
+
 .header .flex .logo{
-    font-size: 3rem;
+    font-size: 2rem;
     color:rgb(232, 221, 20);
 }
 .header .flex .logo i{
@@ -723,6 +739,77 @@ header .flex .navbar a:hover{
     text-decoration: underline;
 }
 
+.post-job h1{
+    border-top: 0.8rem solid var(--orange);
+    border-bottom: 0.8rem solid var(--orange);
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 4rem 1rem;
+    font-size: 5rem;
+    text-transform: capitalize;
+}
+.post-job form{
+    background-color: white;
+    width: 100%;
+    border-radius: .5rem;
+    padding: .5rem;
+    text-align: center;
+}
+.post-job form .form-group{
+    border: var(--border);
+    box-shadow: var(--box-shadow);
+    color: black;
+    padding: .3rem;
+    margin: 1rem;
+    column-gap: 1rem;
+    border-radius: .5rem;
+    width:100%;
+    text-align: center;
+    display: flex;
+}
+.post-job form .form-group label{
+    font-size: 2rem;
+    margin-right: 8rem;
+    font-weight: 400;
+    text-align: center;
+    justify-content: center;
+    display: block;
+}
+.post-job form .form-group input{
+    font-size: 2rem;
+    justify-content: center;
+    align-items: center;
+    margin-right: 50rem;
+}
+.post-job .form-group label span{
+    color: red;
+}
+.post-job .form-group select{
+    font-size: 1.8rem;
+    justify-content: center;
+    align-items: center;
+    margin-right: 21rem;
+}
+.post-job .form-group select option{
+    font-size: 1.4rem;
+    justify-content: center;
+    align-items: center;
+}
+.post-job .form-group textarea{
+    font-size: 1.8rem;
+    align-items: center;
+    margin-right: 50rem;
+    padding-left: 2rem;
+    display: flex;
+}
+.post-job .form-group .btn{
+    display: inline-block;
+    justify-content: center;
+    align-items: center;
+    margin-right: 45rem;
+}
+
 
 
 
@@ -794,6 +881,14 @@ header .flex .navbar a:hover{
     #menu-btn{
         display: inline-block;
     }
+    .btn-link{
+        display: inline-block;
+        padding: 1.5rem 2rem;
+        size: 15rem;
+    }
+    .logo{
+        size: 15rem;
+    }
     .header .flex .navbar{
         position: absolute;
         top: 99%;
@@ -832,5 +927,13 @@ header .flex .navbar a:hover{
     }
     .section-title{
         font-size: 3.5rem;
-        } 
+    } 
+    .btn-link{
+        display: inline-block;
+        padding: 1rem 1.8rem;
+        size: 8rem;
+        }
+    .logo{
+        size: 8rem;
+    }
 }
