--- a/public/style.css
+++ b/public/style.css
@@ -74,7 +74,18 @@ section{
     font-size: 6rem;
     text-transform: capitalize;
 }
-
+.btn{
+    display: inline-block;
+    margin-top: 1rem;
+    padding: 1rem 3rem;
+    cursor: pointer;
+    font-size: 1.8rem;
+    color: rgb(164, 164, 22);
+    background-color: var(--main-color);
+    border-radius: .5rem;
+    text-transform: capitalize;
+    text-align: center;
+}
 .btn-link{
     display: inline-block;
     margin-top: 1rem;
